--- a/page1.html
+++ b/page1.html
@@ -42,7 +42,7 @@
 <!-- /Google Analytics -->
 
 
-  <link rel="stylesheet" href="style.less" class="cid-riACZ50dT5" id="menu1-1m" data-rv-view="7262"><section class="menu cid-riACZ50dT5" once="menu" id="menu1-1m">
+  <link rel="stylesheet" href="style.less" class="cid-riACZ50dT5" id="menu1-1m" data-rv-view="7849"><section class="menu cid-riACZ50dT5" once="menu" id="menu1-1m">
 
     
 
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="mbr-section content5 cid-riADUS1DwW mbr-parallax-background" id="content5-1o">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="mbr-section content5 cid-riADUS1DwW mbr-parallax-background" id="content5-1o">
 
     
 
@@ -427,8 +427,6 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
@@ -445,6 +443,5 @@
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
-  <input name="cookieData" type="hidden"data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-colorButton='#ffffff' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
