--- a/page5.html
+++ b/page5.html
@@ -41,7 +41,7 @@
 <!-- /Google Analytics -->
 
 
-  <link rel="stylesheet" href="style.less" class="cid-riADjnrolX" id="menu1-1n" data-rv-view="8945"><section class="menu cid-riADjnrolX" once="menu" id="menu1-1n">
+  <link rel="stylesheet" href="style.less" class="cid-riADjnrolX" id="menu1-1n" data-rv-view="9721"><section class="menu cid-riADjnrolX" once="menu" id="menu1-1n">
 
     
 
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-riAEz4n8MT mbr-parallax-background" id="content5-1p">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content5 cid-riAEz4n8MT mbr-parallax-background" id="content5-1p">
 
     
 
@@ -214,53 +214,46 @@
                 </div><div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/face2.jpg">
+                            <img src="assets/images/notfound-333x333.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae nostrum, quos voluptas fugiat blanditiis, temporibus expedita cumque doloribus ea, officiis consequuntur repellat minus ad veritatis? Facere similique accusamus, accusantium sunt!
-                            </p>
+                                News item</p>
                         </div>
                         <div class="user_name mbr-bold pb-2 mbr-fonts-style display-7">
-                            Linda
-                        </div>
+                            Paper</div>
                         <div class="user_desk mbr-light mbr-fonts-style display-7">
-                            DEVELOPER
-                        </div>
+                            Citation</div>
                     </div>
                 </div><div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/face2.jpg">
+                            <img src="assets/images/notfound-333x333.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae nostrum, quos voluptas fugiat blanditiis, temporibus expedita cumque doloribus ea, officiis consequuntur repellat minus ad veritatis? Facere similique accusamus, accusantium sunt!
+                                News item
                             </p>
                         </div>
                         <div class="user_name mbr-bold pb-2 mbr-fonts-style display-7">
-                            Linda
-                        </div>
+                            Paper</div>
                         <div class="user_desk mbr-light mbr-fonts-style display-7">
-                            DEVELOPER
-                        </div>
+                            Citation</div>
                     </div>
                 </div><div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/face2.jpg">
+                            <img src="assets/images/notfound-333x333.png" alt="" title="">
                         </div>
                         <div class="user_text pb-3">
                             <p class="mbr-fonts-style display-7">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae nostrum, quos voluptas fugiat blanditiis, temporibus expedita cumque doloribus ea, officiis consequuntur repellat minus ad veritatis? Facere similique accusamus, accusantium sunt!
+                                News item
                             </p>
                         </div>
                         <div class="user_name mbr-bold pb-2 mbr-fonts-style display-7">
-                            Linda
-                        </div>
+                            Paper</div>
                         <div class="user_desk mbr-light mbr-fonts-style display-7">
-                            DEVELOPER
-                        </div>
+                            Citation</div>
                     </div>
                 </div></div>
 
