--- a/page6.html
+++ b/page6.html
@@ -41,7 +41,7 @@
 <!-- /Google Analytics -->
 
 
-  <link rel="stylesheet" href="style.less" class="cid-riADjnrolX" id="menu1-1n" data-rv-view="8982"><section class="menu cid-riADjnrolX" once="menu" id="menu1-1n">
+  <link rel="stylesheet" href="style.less" class="cid-riADjnrolX" id="menu1-1n" data-rv-view="9758"><section class="menu cid-riADjnrolX" once="menu" id="menu1-1n">
 
     
 
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-riAEz4n8MT mbr-parallax-background" id="content5-1p">
+<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section class="mbr-section content5 cid-riAEz4n8MT mbr-parallax-background" id="content5-1p">
 
     
 
