create github pages

--- a/page6.html
+++ b/page6.html
@@ -40,7 +40,7 @@
 <!-- /Analytics -->
 
 
-  <link rel="stylesheet" href="style.less" class="cid-riADjnrolX" id="menu1-1n" data-rv-view="11517"><section class="menu cid-riADjnrolX" once="menu" id="menu1-1n">
+  <link rel="stylesheet" href="style.less" class="cid-riADjnrolX" id="menu1-1n" data-rv-view="12757"><section class="menu cid-riADjnrolX" once="menu" id="menu1-1n">
 
     
 
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-section content5 cid-riAEz4n8MT mbr-parallax-background" id="content5-1p">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-riAEz4n8MT mbr-parallax-background" id="content5-1p">
 
     
 
