create github pages

--- a/page1.html
+++ b/page1.html
@@ -41,7 +41,7 @@
 <!-- /Analytics -->
 
 
-  <link rel="stylesheet" href="style.less" class="cid-riACZ50dT5" id="menu1-1m" data-rv-view="12194"><section class="menu cid-riACZ50dT5" once="menu" id="menu1-1m">
+  <link rel="stylesheet" href="style.less" class="cid-riACZ50dT5" id="menu1-1m" data-rv-view="12814"><section class="menu cid-riACZ50dT5" once="menu" id="menu1-1m">
 
     
 
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a website for free</a></section><section class="mbr-section content5 cid-riADUS1DwW mbr-parallax-background" id="content5-1o">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-riADUS1DwW mbr-parallax-background" id="content5-1o">
 
     
 
