--- a/page2.html
+++ b/page2.html
@@ -41,7 +41,7 @@
 <!-- /Analytics -->
 
 
-  <link rel="stylesheet" href="style.less" class="cid-riADjnrolX" id="menu1-1n" data-rv-view="12571"><section class="menu cid-riADjnrolX" once="menu" id="menu1-1n">
+  <link rel="stylesheet" href="style.less" class="cid-riADjnrolX" id="menu1-1n" data-rv-view="13191"><section class="menu cid-riADjnrolX" once="menu" id="menu1-1n">
 
     
 
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-riAEz4n8MT mbr-parallax-background" id="content5-1p">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="mbr-section content5 cid-riAEz4n8MT mbr-parallax-background" id="content5-1p">
 
     
 
