--- a/page7.html
+++ b/page7.html
@@ -40,7 +40,7 @@
 <!-- /Analytics -->
 
 
-  <link rel="stylesheet" href="style.less" class="cid-rIsN5R7Mkf" id="menu1-33" data-rv-view="12777"><section class="menu cid-rIsN5R7Mkf" once="menu" id="menu1-33">
+  <link rel="stylesheet" href="style.less" class="cid-rIsN5R7Mkf" id="menu1-33" data-rv-view="13397"><section class="menu cid-rIsN5R7Mkf" once="menu" id="menu1-33">
 
     
 
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-rIsN5Sdsi9 mbr-parallax-background" id="content5-34">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section content5 cid-rIsN5Sdsi9 mbr-parallax-background" id="content5-34">
 
     
 
